deployment_jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: private_registry_url.com/play/jenkins
        name: jenkins
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: "/var/jenkins_home"
        - name: docker-sock
          mountPath: "/var/run/docker.sock"
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
      - name: docker-sock
        hostPath:
          path: "/var/run/docker.sock"
